# get_notes/app.py
@@ -1,44 +1,28 @@
 import json
 import boto3
-import decimal, datetime
-
+from boto3.dynamodb.conditions import Key, Attr
 from aws_xray_sdk.core import patch_all
-from sqlalchemy import text, create_engine
 
 patch_all()
 
-ssm = boto3.client('ssm')
-username = ssm.get_parameter(Name="/dev/postgres/username")['Parameter']['Value']
-password = ssm.get_parameter(Name="/dev/postgres/password")['Parameter']['Value']
-database_url = ssm.get_parameter(Name="/dev/postgres/database_url")['Parameter']['Value']
-port = ssm.get_parameter(Name="/dev/postgres/port")['Parameter']['Value']
-database = ssm.get_parameter(Name="/dev/postgres/database")['Parameter']['Value']
-
-database_url = f"postgresql://{username}:{password}@{database_url}:{port}/{database}"
-
-engine = create_engine(database_url)
-
-def alchemyencoder(obj):
-    """JSON encoder function for SQLAlchemy special classes."""
-    if isinstance(obj, datetime.date):
-        return obj.isoformat()
-    elif isinstance(obj, decimal.Decimal):
-        return float(obj)
-
 def lambda_handler(event, context):
     print (f"{event} {type(event)}")
+    user_id = event['pathParameters']['user_id']
 
-    with engine.connect() as connection:
-        query = text("SELECT * FROM public.notes")
-        result = connection.execute(query)
+    dynamodb = boto3.resource('dynamodb', region_name="us-east-1")
+    table = dynamodb.Table('notes-2.3.2')
+    notes = []
+    done = False
+    start_key = None
 
-    notes = json.dumps([dict(row) for row in result], default=alchemyencoder)
+    while not done:
+        response = table.scan(FilterExpression=Key('ID').begins_with(f"USER#{user_id}") & Attr('Type').eq('NOTE'))
+        print(f"{response}")
+        notes += response['Items']
+        start_key = response.get('LastEvaluatedKey', None)
+        done = start_key is None
 
     return {
-        'statusCode': 200,
-        'body': notes,
-        'headers': {
-            'content-type' : 'application/json'
-        },
-        "isBase64Encoded": False
+        "statusCode": 200,
+        "body": json.dumps(notes)
     }
